fix(cli): restore Node missing-cache parity after source-cache migration
Ignore leftover version-operation locks in CLI state capture, give the offline rebuild fixture a matching Example class file, and keep the pinned Node wording for missing source cache.